--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "cwhpp"
-version = "0.4.10"
-description = "Country Wide Housing Prices Predictions"
+name = "crospint"
+version = "0.1.0"
+description = "Coordinate Rotation for Spatial Interpolation"
 readme = "README.md"
 requires-python = ">=3.12"
 authors = [
